syntax = "proto3";

option go_package = "github.com/wilenceyao/humor-api/api/mqtt";

package mqtt;

enum Action {
    NONE = 0;
    TTS = 1;
}

message Message {
    string traceID = 1;
    Action action = 2;
    bytes payload = 3;
}

enum ErrorCode {
     SUCCESS = 0;
     // 参数类错误
     INVALID_PARAMETERS = 1;
     UNSUPPORTED_OPERATION = 2;
     // 内部错误
     INTERNAL_ERROR = 10;
     // 外部错误，20开头
     EXTERNAL_ERROR = 20;
}

message BaseReply {
   ErrorCode code = 1;
   string msg = 2;
}

message TtsRequest {
    string text = 1;
}

message TtsReply {
    BaseReply reply = 1;
}